multiplayer icon for user published projects. Fixes #37 (#38)
* added multiplayer icon for user projects,
truncate long titles to shorter versions

* revert projectname trucation? .

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -32,6 +32,10 @@ div.btn-group {
   width: 100%;
 }
 
+.fa.pull-right {
+    margin-top: 3px;
+}
+
 /* set navbar size backto normal since we dont have logo there*/
 nav.navbar {
   margin-left:unset;
